# tcp-client-server

./: .clang-format  CMakeLists.txt  README.md
src/: client.c  common.h  server.c
